--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -47,6 +47,8 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="AimElevation",Key=Gamepad_RightY,Scale=1.000000)
 +AxisMappings=(AxisName="Left Throttle",Key=A,Scale=1.000000)
 +AxisMappings=(AxisName="Right Throttle",Key=D,Scale=1.000000)
++AxisMappings=(AxisName="Left Throttle",Key=Gamepad_LeftTrigger,Scale=1.000000)
++AxisMappings=(AxisName="Right Throttle",Key=None,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
