Using cross product to make AI tanks turn...

--- a/BattleTank/Config/DefaultGame.ini
+++ b/BattleTank/Config/DefaultGame.ini
@@ -1,5 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=288E394A445A413D6EA4E88D0467358E
+CopyrightNotice=Copyright Malcolm Ferguson
 
 [StartupActions]
 bAddPacks=True
